# ebpf-sketches

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bcc-patch.patch  count_sketch.py  countmin_sketch.py  install-requirements.sh  nitrosketch-univmon.py  nitrosketch.py  pyproject.toml  requirements.txt  univmon.py
.github/workflows/: build-and-publish.yml  build-deps.yml  test-sketches.yml
nitrosketch-perf-drilldown/: nitrosketch-conf1.py  nitrosketch-conf2.py  nitrosketch-conf3.py  nitrosketch-conf4.py  nitrosketch-conf5.py  nitrosketch-conf6.py
nitrosketch-univmon-perf-drilldown/: nitrosketch-univmon-conf1.py  nitrosketch-univmon-conf2.py  nitrosketch-univmon-conf3.py  nitrosketch-univmon-conf4.py  nitrosketch-univmon-conf5.py  nitrosketch-univmon-conf6.py
pkt-generator/: README.md  dpdk-burst-replay.patch  pktgen-dpdk-cfg
src/ebpf/: common.h  lookup3.h
src/hash_lib/: Makefile  fasthash.c  lookup3.c  xxhash32.c  xxhash64.c
tests/: run-test-count-sketch-drop.sh  run-test-countmin-sketch-drop.sh  run-test-nitrosketch-drop-perf-drilldown.sh  run-test-nitrosketch-drop-unoptimized.sh  run-test-nitrosketch-drop.sh  run-test-nitrosketch-redirect.sh  run-test-nitrosketch-univmon-drop-perf-drilldown.sh  run-test-nitrosketch-univmon-drop-unoptimized.sh  run-test-nitrosketch-univmon-drop.sh  run-test-nitrosketch-univmon-redirect.sh  run-test-xdp-baseline.sh  setup_flow_director_multi_core.sh  setup_flow_director_single_core.sh
tests/micro-benchmarks/: .gitignore  runexp_arraytable.py  runexp_geo_array.py  runexp_hashbench_ebpf.py  runexp_hashrate.py  (+6 more)
(+96 files in other folders)
