[tool.poetry]
name = "ebpf-sketches"
version = "0.1.0"
description = "A list of network measurement sketch algorithms implemented in eBPF"
authors = ["Sebastiano Miano <mianosebastiano@gmail.com>"]
license = "Apache v2"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.4"
scipy = "^1.13.0"
pyroute2 = "^0.7.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
